[package]
name = "server"
version = "0.1.0"
authors = ["Florentin Hennecker <fhennecker@scortex.io>"]
edition = "2018"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"
